--- a/wercker.yml
+++ b/wercker.yml
@@ -1,14 +1,17 @@
-box: tutum/curl
+box: wercker/default
+
 build:
   steps:
-  - shellcheck:
-    files: run.sh
-  - script:
-    name: test run.sh
-    code: |
-      export WERCKER_VERIFY_QUAY_TAG_REPOSITORY=blendle/true
-      WERCKER_VERIFY_QUAY_TAG_TAG=latest $WERCKER_ROOT/run.sh
-      WERCKER_VERIFY_QUAY_TAG_TAG=other $WERCKER_ROOT/run.sh
-  - script:
-    name: prepare output
-    code: rm -rf $WERCKER_ROOT/.git
+    - install-packages:
+        packages: curl
+    - shellcheck:
+        files: run.sh
+    - script:
+        name: test run.sh
+        code: |
+          export WERCKER_VERIFY_QUAY_TAG_REPOSITORY=blendle/true
+          WERCKER_VERIFY_QUAY_TAG_TAG=latest $WERCKER_ROOT/run.sh
+          WERCKER_VERIFY_QUAY_TAG_TAG=other $WERCKER_ROOT/run.sh
+    - script:
+        name: prepare output
+        code: rm -rf $WERCKER_ROOT/.git
